--- a/src/index.pug
+++ b/src/index.pug
@@ -25,3 +25,13 @@ html(lang="es")
       .hero-content
         h1 Bienvenidos a Almonaster la Real
         p Uno de los pueblos más bonitos de España y situado en la Sierra de Huelva, en pleno Parque Natural de Aracena y Picos de Aroche.
+
+    footer
+        div#footer-text.footer   
+            p Santiago Martín-Palomo García
+            p Máster Universitario en Desarrollo de Sitios y Aplicaciones Web 
+            p M4.257 - Herramientas HTML y CSS 
+        
+        div#footer-logo.footer 
+            a(href="index.pug") 
+            img(src="./assets/images/LogoUOC_bn.png" alt="Logo UOC" class="logo")
