--- a/src/index.pug
+++ b/src/index.pug
@@ -7,20 +7,22 @@ html(lang="es")
     link(rel="stylesheet" href="./assets/css/styles.scss")
   body
     header
-      nav
-        div#logo.nav
-            a(href="index.pug") 
-            img(src="./assets/images/Logo_Almonaster-A.png" alt="Logo de Almonaster la Real" class="logo")
-        div#menu.nav
-            ul
-                li
-                    a(href="#") Categoría
-                li
-                    a(href="#") Detalle
-                li
-                    a(href="#") Presentación
-                li
-                    a(href="#") Enlaces
+        nav.standar
+            div#logo.nav
+                a(href="index.pug") 
+                img(src="./assets/images/Logo_Almonaster-A.png" alt="Logo de Almonaster la Real" class="logo")
+            div#menu.nav
+                ul
+                    li
+                        a(href="#") Categoría
+                    li
+                        a(href="#") Detalle
+                    li
+                        a(href="#") Presentación
+                    li
+                        a(href="#") Enlaces
+        
+
     section.hero
       .hero-content
         h1 Bienvenidos a Almonaster la Real
