--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -11,11 +11,12 @@ html{
   max-width: 1280px;
   width: 100vw;
   margin: auto;  
+  font-family: $font-type;
 }
 
 // Estilos del header y navegación
 header {
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.75);
     padding: 1rem;
     display: flex;
     align-items: center;
@@ -56,20 +57,20 @@ header {
   }
 
 // Estilos de la sección principal con imagen de fondo
-.hero {
-    background: linear-gradient(rgba(0, 0, 0, 0.30), rgba(0, 0, 0, 0.30)), 
+.index-main-section, .categoria-main-section{
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.30)), 
                 url('../images/index_background_v2.jpg') no-repeat center center/cover;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
     text-align: center;
-    font-family: $font-type;
+    
     margin-bottom: 0px;
     padding-bottom: 0px;
   
-    .hero-content {
+    .index-content {
       max-width: 600px;
   
       h1 {
@@ -80,6 +81,30 @@ header {
         font-size: 1.5rem;
         color:white;
         font-family: $font-type;
+      }
+    }
+
+    .categoria-content {
+      max-width: 1080px;
+      text-align: left;
+
+      background: rgba(255, 255, 255, 0.75);
+      border: solid 2px  rgba(0, 0, 0, 0.75);
+      padding: 1rem;
+      margin: 1rem;
+      color: rgba(0, 0, 0, 0.75);
+  
+      h1 {
+        font-size: 2rem;
+      }
+  
+      p {
+        font-size: 1.25rem;
+        font-family: $font-type;
+        line-height: 1.75rem;
+      }
+      span {
+        font-weight: bold;
       }
     }
 }
