--- a/src/header.pug
+++ b/src/header.pug
@@ -8,8 +8,6 @@ header
                 li
                     a(href="categoria.pug") Categoría
                 li
-                    a(href="#") Detalle
-                li
                     a(href="#") Presentación
                 li
-                    a(href="#") Enlaces
+                    a(href="enlaces.pug") Enlaces
