Creación de detalles_XXX.pug - 09/11/2024

--- a/src/enlaces.pug
+++ b/src/enlaces.pug
@@ -37,7 +37,7 @@ html(lang="es")
                 li 
                   p "Listado de personajes históricos relevantes de Almonaster la Real relacionados con la guerra de independencia de 1812".
             li 
-              p Imágenes: 
+              p Imágenes utilizadas obtenidas de las siguientes fuentes: 
               ul 
                 li 
                   p 
