Creación de detalles_XXX.pug - 09/11/2024

--- a/src/enlaces.pug
+++ b/src/enlaces.pug
@@ -54,5 +54,12 @@ html(lang="es")
                 li 
                   p 
                     a(target="_blank" href="https://www.conocetusfuentes.com/datos_fuente_46.html") https://www.conocetusfuentes.com/datos_fuente_46.html  
+            li 
+              p Videos utilizados obtenidos de las siguientes fuentes: 
+              ul
+                li 
+                  p 
+                    a(target="_blank" href="https://www.youtube.com/watch?v=ayYBrkRkcpY") https://www.youtube.com/watch?v=ayYBrkRkcpY
+
 
     include footer.pug
