--- a/src/index.pug
+++ b/src/index.pug
@@ -14,4 +14,7 @@ html(lang="es")
                 h1 Bienvenidos a Almonaster la Real
                 p Uno de los pueblos más bonitos de España y situado en la Sierra de Huelva, en pleno Parque Natural de Aracena y Picos de Aroche.
 
+                video(controls)
+                    src=("https://www.youtube.com/watch?v=uz2zZET_eOY")
+
     include footer.pug
