Creación de detalles_XXX.pug y Presentacion.pug- 09/11/2024

--- a/src/header.pug
+++ b/src/header.pug
@@ -8,6 +8,6 @@ header
                 li
                     a(href="categoria.pug") Categoría
                 li
-                    a(href="#") Presentación
+                    a(href="presentacion.pug") Presentación
                 li
                     a(href="enlaces.pug") Enlaces
