Creación de detalles_XXX.pug y Presentacion.pug- 09/11/2024

--- a/src/enlaces.pug
+++ b/src/enlaces.pug
@@ -54,6 +54,13 @@ html(lang="es")
                 li 
                   p 
                     a(target="_blank" href="https://www.conocetusfuentes.com/datos_fuente_46.html") https://www.conocetusfuentes.com/datos_fuente_46.html  
+                li 
+                  p 
+                    a(target="_blank" href="https://www.recuerdosdemimochila.com/almonaster-la-real/") https://www.recuerdosdemimochila.com/almonaster-la-real/
+                li 
+                  p 
+                    a(target="_blank" href="https://www.caracolviajero.com.es/blog/que-ver-en-almonaster-la-real-mezquita/") https://www.caracolviajero.com.es/blog/que-ver-en-almonaster-la-real-mezquita/
+                    
             li 
               p Videos utilizados obtenidos de las siguientes fuentes: 
               ul
