--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -58,7 +58,7 @@ header {
   }
 
 // Estilos de la sección principal con imagen de fondo
-.index-main-section, .categoria-main-section, .detalle-main-section, .enlaces-main-section{
+.index-main-section, .categoria-main-section, .detalle-main-section, .enlaces-main-section, .presentacion-main-section {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.30)), 
                 url('../images/index_background_v2.jpg') no-repeat center center/cover;
   min-height: 100vh;
@@ -89,7 +89,7 @@ header {
     }
   }
 
-  .categoria-content, .detalle-content, .enlaces-content{
+  .categoria-content, .detalle-content, .enlaces-content, .presentacion-content{
     max-width: 1080px;
     text-align: left;
 
@@ -128,6 +128,21 @@ header {
     img{
       width: 75%;
       max-width: 1024px;
+    }
+  }
+
+  .presentacion-content-mis_datos {
+    display: flex;
+    
+    .presentacion-content-mis_datos-imagen {
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      
+      img {
+        width: 70%;
+        max-width: 640px;
+      }
     }
   }
 }
@@ -171,7 +186,7 @@ footer {
     }
   }
   
-  .index-content, .categoria-content, .detalle-content, .enlaces-content {
+  .index-content, .categoria-content, .detalle-content, .enlaces-content, .presentacion-content {
     width: 90vw;
     display: flex;
     flex-direction: column;
