--- a/src/presentacion.pug
+++ b/src/presentacion.pug
@@ -9,8 +9,22 @@ html(lang="es")
     include header.pug
 
     main
-      section.presentacion-main-section
-        .presentacion-content
+      article.presentacion-main-article
+        section.presentacion-main-section
+          .presentacion-content
+            h1 Presentación
+            .presentacion-content-mis_datos
+              .presentacion-content-mis_datos-texto
+                p Mi nombre es Santiago Martín. Ingeniero Técnico Informático, Graduado en Tecnologías de las Telecomunicaciones y de profesión Administrador de Infraestructuras TIC y Profesor en Ciclos Formativos de FP en la rama TIC. 
+                p Además de lo comentado, también soy estudiante del Máster Universitario en Desarrollo de Sitios y Aplicaciones Web y del Máster de Ciberseguridad y Privacidad, ambos de la UOC 
+              .presentacion-content-mis_datos-imagen 
+                img(src="./assets/images/Santiago_Martín.jpg" alt="Santiago Martín") 
           
+            h2 Objetivo de este sitio web 
+
+            p El objetivo del presente sitio web consiste en ser únicamente un desarrollo demostrativo del uso de herramientas avanzadas para la creación de sitios web usando entornos de desarrollo actuales tales como Parcel y Node.js 
+            p El contenido de este site es un pequeño resumen sobre la historia de una localidad denominada Almonaster la Real, situada en la sierra de la provincia de Huelva, en pleno Parque Natural de Aracena y Picos de Aroche. Además, está considerada "Uno de los pueblos más bonitos de España" 
+            p Se muestra información muy resumida y general sobre algunos hechos históricos importantes de la localidad desde su época musulmana hasta su participación en la guerra de la independencia. 
+            p Dado que no se trata de un sitio web oficial y su único objetivo es practicar con las tecnologías antes mencionadas, no se ha realizado una búsqueda exaustiva de información y toda la que se muestra procede de páginas y blog turísicos y entidades similares, así como de consultas realizadas a herramientas de IA generativa como ChatGPT.
           
     include footer.pug
