Versión Final PEC1 - 10/11/2024

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -72,7 +72,7 @@ header {
   padding-bottom: 0px;
   
   .index-content {
-    max-width: 600px;
+    max-width: 980px;
   
     h1 {
       font-size: 3rem;
@@ -145,6 +145,60 @@ header {
       }
     }
   }
+    //Estilo para los carruseles de imágenes
+
+    .index-carrusel {
+      position: relative;
+      background: rgba(255, 255, 255, 0.75);
+      border: solid 2px  rgba(0, 0, 0, 0.75);
+      padding: 1rem;
+      margin: 0 0 1rem 0;
+      width: 100%;
+      
+      overflow: hidden;
+      
+    }
+    
+    .carrusel {
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+    }
+    
+    .carrusel img {
+      width: 100%;
+      max-width: 980px;
+      
+      height: auto;
+      display: none;
+    }
+    
+    .carrusel img.active {
+      display: block;
+    }
+    
+    button {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+    }
+    
+    button.prev {
+      left: 10px;
+    }
+    
+    button.next {
+      right: 10px;
+    }
+    
+    button:hover {
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+
 }
 
 // Estilos de el pie de página
