--- a/src/categoria.pug
+++ b/src/categoria.pug
@@ -15,7 +15,7 @@ html(lang="es")
           h2 Mezquita de Almonaster
           p 
             figure
-              img(src="./assets/images/Mezquita_de_al-Monastir._Haram.jpg" alt="Interior de la Mezquita de Almonaster la Real")
+              img(src="./assets/images/Mezquita_de_al-Monastir_Haram.jpg" alt="Interior de la Mezquita de Almonaster la Real")
               figcaption Mezquita de Almonaster la Real.
           
           p Construida entre los siglos IX y X, es uno de los pocos ejemplos de mezquitas rurales que se conservan en España. Situada en la cima de una colina y rodeada de un paisaje natural impresionante, esta mezquita representa el arte islámico en la península ibérica, con una arquitectura sencilla y austera. Tras la Reconquista en el siglo XIII, fue adaptada al culto cristiano, preservando su estructura original. Junto a la mezquita se encuentra el Castillo de Almonaster, una fortificación medieval que ofrece vistas panorámicas de la Sierra de Huelva y destaca por su valor defensivo histórico. Además, la localidad cuenta con una plaza de toros única, una de las más antiguas de España, integrada en la ladera de la colina, lo que añade un carácter singular al conjunto patrimonial de Almonaster, donde convergen historia, cultura y tradición.
