--- a/src/index.pug
+++ b/src/index.pug
@@ -14,4 +14,22 @@ html(lang="es")
                 h1 Bienvenidos a Almonaster la Real
                 p Uno de los pueblos más bonitos de España y situado en la Sierra de Huelva, en pleno Parque Natural de Aracena y Picos de Aroche.
 
+                .index-carrusel
+                    .carrusel 
+                        img(src="./assets/images/Almonaster-la-real-1-1.jpg" alt="Foto 1" class="active")
+                        img(src="./assets/images/iglesia-san-martin-almonaster-la-real.jpg" alt="Foto 2")
+                        img(src="./assets/images/fuente_de_concejo.jpg" alt="Foto 3")
+                        img(src="./assets/images/index_background_v1.jpg" alt="Foto 4")
+                        img(src="./assets/images/index_background_v2.jpg" alt="Foto 5")
+                        img(src="./assets/images/index_background_v3.jpg" alt="Foto 6")
+                        img(src="./assets/images/mequita-de-almonaster-la-real.jpg" alt="Foto 7")
+                        img(src="./assets/images/Mezquita_de_al-Monastir_Haram.jpg" alt="Foto 8")
+                        img(src="./assets/images/plaza-constitucion-almonaster-la-real.jpg" alt="Foto 9")
+                    
+                    button.prev &lt;
+                    button.next &gt;
+
+                script(src="./assets/js/script.js")
+
+
     include footer.pug
