Versión Final PEC1 - 10/11/2024

--- a/src/detalle_año_1234.pug
+++ b/src/detalle_año_1234.pug
@@ -4,7 +4,7 @@ html(lang="es")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Almonaster la Real - Año 1234
-    link(rel="stylesheet" href="./assets/css/styles.scss")
+    link(rel="stylesheet" href="./assets/css/styles.css")
   body
     include header.pug
 
