--- a/src/presentacion.pug
+++ b/src/presentacion.pug
@@ -4,7 +4,7 @@ html(lang="es")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Almonaster la Real - Presentación
-    link(rel="stylesheet" href="./assets/css/styles.scss")
+    link(rel="stylesheet" href="./assets/css/styles.css")
   body
     include header.pug
 
