Versión Final PEC1 - 10/11/2024

--- a/src/categoria.pug
+++ b/src/categoria.pug
@@ -4,7 +4,7 @@ html(lang="es")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Almonaster la Real
-    link(rel="stylesheet" href="./assets/css/styles.scss")
+    link(rel="stylesheet" href="../dist/styles.css")
   body
     include header.pug
 
@@ -15,20 +15,20 @@ html(lang="es")
           h2 Mezquita de Almonaster
           p 
             figure
-              img(src="./assets/images/Mezquita_de_al-Monastir_Haram.jpg" alt="Interior de la Mezquita de Almonaster la Real")
+              img(src="../images/Mezquita_de_al-Monastir_Haram.jpg" alt="Interior de la Mezquita de Almonaster la Real")
               figcaption Mezquita de Almonaster la Real.
           
           p Construida entre los siglos IX y X, es uno de los pocos ejemplos de mezquitas rurales que se conservan en España. Situada en la cima de una colina y rodeada de un paisaje natural impresionante, esta mezquita representa el arte islámico en la península ibérica, con una arquitectura sencilla y austera. Tras la Reconquista en el siglo XIII, fue adaptada al culto cristiano, preservando su estructura original. Junto a la mezquita se encuentra el Castillo de Almonaster, una fortificación medieval que ofrece vistas panorámicas de la Sierra de Huelva y destaca por su valor defensivo histórico. Además, la localidad cuenta con una plaza de toros única, una de las más antiguas de España, integrada en la ladera de la colina, lo que añade un carácter singular al conjunto patrimonial de Almonaster, donde convergen historia, cultura y tradición.
 
           h2 Iglesia de San Martín: 
           figure
-            img(src="./assets/images/iglesia-san-martin-almonaster-la-real.jpg" alt="Iglesia de San Martín de Almonaster la Real")
+            img(src="../images/iglesia-san-martin-almonaster-la-real.jpg" alt="Iglesia de San Martín de Almonaster la Real")
             figcaption Iglesia de San Martín de Almonaster la Real.
           p Un destacado ejemplo de la arquitectura religiosa mudéjar en Andalucía. Construida entre los siglos XIV y XV sobre una antigua estructura visigoda, la iglesia refleja una mezcla de estilos gótico y mudéjar, que se aprecia en sus arcos de herradura y detalles decorativos. En su interior alberga valiosas obras de arte sacro y elementos históricos que han perdurado a lo largo de los siglos. La iglesia sigue siendo un lugar de culto activo y un símbolo del patrimonio religioso y cultural de Almonaster, atrayendo a visitantes interesados en su rica historia y belleza arquitectónica.
           
           h2 Fuente de Concejo: 
           figure
-            img(src="./assets/images/fuente_de_concejo.jpg" alt="Interior de la Mezquita de Almonaster la Real")
+            img(src="../images/fuente_de_concejo.jpg" alt="Interior de la Mezquita de Almonaster la Real")
             figcaption Fuente de Concejo de Almonaster la Real.
           p Es un elemento histórico de gran valor cultural, ubicado en pleno casco antiguo de la localidad. Construida en el siglo XVIII, esta fuente pública fue durante siglos un importante punto de encuentro para los habitantes y un recurso esencial para el abastecimiento de agua. Su estructura sencilla, con un amplio abrevadero y pilas de piedra, refleja la arquitectura popular de la época y la función comunitaria que desempeñaba. La Fuente del Concejo se ha mantenido como un símbolo de la vida cotidiana y las tradiciones de Almonaster, y continúa siendo un atractivo turístico que conecta a los visitantes con el pasado histórico de la localidad.
 
