--- a/src/header.pug
+++ b/src/header.pug
@@ -2,7 +2,7 @@ header
     nav.standar
         div#logo.nav
             a(href="index.pug") 
-                img(src="./assets/images/Logo_Almonaster-A.png" alt="Logo de Almonaster la Real" class="logo")
+                img(src="../images/Logo_Almonaster-A.png" alt="Logo de Almonaster la Real" class="logo")
         div#menu.nav
             ul
                 li
