--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,7 @@ html(lang="es")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Almonaster la Real
-    link(rel="stylesheet" href="./assets/css/styles.scss")
+    link(rel="stylesheet" href="../dist/styles.css")
   body
     include header.pug
 
@@ -16,20 +16,20 @@ html(lang="es")
 
                 .index-carrusel
                     .carrusel 
-                        img(src="./assets/images/Almonaster-la-real-1-1.jpg" alt="Foto 1" class="active")
-                        img(src="./assets/images/iglesia-san-martin-almonaster-la-real.jpg" alt="Foto 2")
-                        img(src="./assets/images/fuente_de_concejo.jpg" alt="Foto 3")
-                        img(src="./assets/images/index_background_v1.jpg" alt="Foto 4")
-                        img(src="./assets/images/index_background_v2.jpg" alt="Foto 5")
-                        img(src="./assets/images/index_background_v3.jpg" alt="Foto 6")
-                        img(src="./assets/images/mequita-de-almonaster-la-real.jpg" alt="Foto 7")
-                        img(src="./assets/images/Mezquita_de_al-Monastir_Haram.jpg" alt="Foto 8")
-                        img(src="./assets/images/plaza-constitucion-almonaster-la-real.jpg" alt="Foto 9")
+                        img(src="../images/Almonaster-la-real-1-1.jpg" alt="Foto 1" class="active")
+                        img(src="../images/iglesia-san-martin-almonaster-la-real.jpg" alt="Foto 2")
+                        img(src="../images/fuente_de_concejo.jpg" alt="Foto 3")
+                        img(src="../images/index_background_v1.jpg" alt="Foto 4")
+                        img(src="../images/index_background_v2.jpg" alt="Foto 5")
+                        img(src="../images/index_background_v3.jpg" alt="Foto 6")
+                        img(src="../images/mequita-de-almonaster-la-real.jpg" alt="Foto 7")
+                        img(src="../images/Mezquita_de_al-Monastir_Haram.jpg" alt="Foto 8")
+                        img(src="../images/plaza-constitucion-almonaster-la-real.jpg" alt="Foto 9")
                     
                     button.prev &lt;
                     button.next &gt;
 
-                script(src="./assets/js/script.js")
+                script(src="../js/script.js")
 
 
     include footer.pug
