--- a/src/footer.pug
+++ b/src/footer.pug
@@ -6,4 +6,4 @@ footer
         
   div#footer-logo.footer 
     a(href="index.pug") 
-    img(src="./assets/images/LogoUOC_bn.png" alt="Logo UOC" class="logo")
+    img(src="../images/LogoUOC_bn.png" alt="Logo UOC" class="logo")
