Versión Final PEC1 - 10/11/2024

--- a/src/header.pug
+++ b/src/header.pug
@@ -6,8 +6,8 @@ header
         div#menu.nav
             ul
                 li
-                    a(href="presentacion.pug") Presentación
+                    a(href="./presentacion.pug") Presentación
                 li
-                    a(href="categoria.pug") Categoría
+                    a(href="./categoria.pug") Categoría
                 li
-                    a(href="enlaces.pug") Enlaces
+                    a(href="./enlaces.pug") Enlaces
