--- a/src/header.pug
+++ b/src/header.pug
@@ -6,7 +6,7 @@ header
         div#menu.nav
             ul
                 li
-                    a(href="presentacion.html") Presentación
+                    a(href="presentacion.pug") Presentación
                 li
                     a(href="categoria.pug") Categoría
                 li
