--- a/src/enlaces.pug
+++ b/src/enlaces.pug
@@ -4,7 +4,7 @@ html(lang="es")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Almonaster la Real
-    link(rel="stylesheet" href="../dist/styles.css")
+    link(rel="stylesheet" href="styles.scss")
   body
     include header.pug
 
