--- a/src/header.pug
+++ b/src/header.pug
@@ -7,8 +7,8 @@ header
         div#menu.nav
             ul
                 li
-                    a(href="presentacion.pug") Presentación
+                    a(href="presentacion.html") Presentación
                 li
-                    a(href="categoria.pug") Categoría
+                    a(href="categoria.html") Categoría
                 li
-                    a(href="enlaces.pug") Enlaces
+                    a(href="enlaces.html") Enlaces
