--- a/src/index.pug
+++ b/src/index.pug
@@ -15,11 +15,11 @@ html(lang="es")
         div#menu.nav
             ul
                 li
-                    a(href="presentacion.html") Presentación
+                    a(href="presentacion.pug") Presentación
                 li
-                    a(href="categoria.html") Categoría
+                    a(href="categoria.pug") Categoría
                 li
-                    a(href="enlaces.html") Enlaces
+                    a(href="enlaces.pug") Enlaces
 
     main
         section.index-main-section
