Versión Final PEC1 - 10/11/2024

--- a/src/header.pug
+++ b/src/header.pug
@@ -7,7 +7,7 @@ header
         div#menu.nav
             ul
                 li
-                    a(href="presentacion.pug") Presentación
+                    a(href="presentacion.html") Presentación
                 li
                     a(href="categoria.pug") Categoría
                 li
