Versión Final PEC1 - 10/11/2024

--- a/src/header.pug
+++ b/src/header.pug
@@ -2,12 +2,12 @@ doctype html
 header
     nav.standar
         div#logo.nav
-            a(href="index.pug") 
+            a(href="./index.pug") 
                 img(src="../images/Logo_Almonaster-A.png" alt="Logo de Almonaster la Real" class="logo")
         div#menu.nav
             ul
                 li
-                    a(href="presentacion.html") Presentación
+                    a(href="./presentacion.pug") Presentación
                 li
                     a(href="categoria.pug") Categoría
                 li
