--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -60,7 +60,7 @@ header {
 // Estilos de la sección principal con imagen de fondo
 .index-main-section, .categoria-main-section, .detalle-main-section, .enlaces-main-section, .presentacion-main-section {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.30)), 
-                url('../images/index_background_v2.jpg') no-repeat center center/cover;
+                url('../images/index_background_v2.webp') no-repeat center center/cover;
   min-height: 100vh;
   display: flex;
   align-items: center;
