--- a/src/detalle_siglo_IX.pug
+++ b/src/detalle_siglo_IX.pug
@@ -4,7 +4,7 @@ html(lang="es")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Almonaster la Real - Siglo IX
-    link(rel="stylesheet" href="styles.scss")
+    link(rel="stylesheet" href="css/styles.scss")
   body
     include header.pug
 
@@ -15,7 +15,9 @@ html(lang="es")
             h1 Almonaster la Real. Siglo IX: Edificación de la Mezquita
 
             figure
-              img(src="../images/index_background_v3.jpg" alt="Mezquita de Almonaster la Real")
+              picture
+                source(srcset="images/index_background_v3.webp" type="image/webp")
+                img(src="images/index_background_v3.jpg" alt="Mezquita de Almonaster la Real")
               figcaption Vista del exterior de la mezquita de Almonaster la Real.
 
             p La mezquita de Almonaster la Real, ubicada en la Sierra de Huelva, fue construida entre los años 711 y 929, durante el periodo del Emirato de Córdoba. Este período coincidió con la expansión del dominio musulmán en la península ibérica, cuando se desarrollaron importantes obras arquitectónicas para consolidar el poder islámico. La mezquita de Almonaster, que se construyó sobre una antigua basílica visigoda, refleja la práctica común de reutilizar estructuras preexistentes, adaptándolas a las necesidades religiosas de los nuevos gobernantes. Esta edificación es uno de los pocos ejemplos que se conservan de mezquitas rurales en España.
