--- a/src/header.pug
+++ b/src/header.pug
@@ -2,8 +2,10 @@ doctype html
 header
     nav.standar
         div#logo.nav
-            a(href="index.pug") 
-                img(src="../images/Logo_Almonaster-A.png" alt="Logo de Almonaster la Real" class="logo")
+            a(href="index.pug")
+                picture 
+                    source(srcset="images/Logo_Almonaster-A.webp" type="image/webp") 
+                    img(src="images/Logo_Almonaster-A.png" alt="Logo de Almonaster la Real" class="logo")
         div#menu.nav
             ul
                 li
