--- a/src/presentacion.pug
+++ b/src/presentacion.pug
@@ -4,7 +4,7 @@ html(lang="es")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Almonaster la Real - Presentación
-    link(rel="stylesheet" href="styles.scss")
+    link(rel="stylesheet" href="css/styles.scss")
   body
     include header.pug
 
@@ -17,8 +17,10 @@ html(lang="es")
               .presentacion-content-mis_datos-texto
                 p Mi nombre es Santiago Martín. Ingeniero Técnico Informático, Graduado en Tecnologías de las Telecomunicaciones y de profesión Administrador de Infraestructuras TIC y Profesor en Ciclos Formativos de FP en la rama TIC. 
                 p Además de lo comentado, también soy estudiante del Máster Universitario en Desarrollo de Sitios y Aplicaciones Web y del Máster de Ciberseguridad y Privacidad, ambos de la UOC 
-              .presentacion-content-mis_datos-imagen 
-                img(src="../images/Santiago_Martín.jpg" alt="Santiago Martín") 
+              .presentacion-content-mis_datos-imagen
+                picture 
+                  source(srcset="images/Santiago_Martín.webp" type="image/webp") 
+                  img(src="images/Santiago_Martín.jpg" alt="Santiago Martín") 
           
             h2 Objetivo de este sitio web 
 
