--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -213,6 +213,21 @@ footer {
   align-items: center;
   height: 18vh;
 
+  div.title{
+    border-bottom: 2px solid white;
+  }
+  span.title {
+    font-size: 1.2em;
+  }
+
+  a {
+    color: white;
+    text-decoration: none;
+    &:hover {
+      color: $primary-color;
+    }
+  }
+
   p {
     margin: 0.5rem 0 0 0;
   }
@@ -238,6 +253,10 @@ footer {
       flex-direction: column;
       align-items: flex-end;
     }
+  }
+
+  .index-carrusel{
+    max-width: 90%;
   }
   
   .index-content, .categoria-content, .detalle-content, .enlaces-content, .presentacion-content {
@@ -269,9 +288,18 @@ footer {
     background: rgba(0, 0, 0, 0.6);
     display: flex;
     flex-direction: column;
-    height: 100px;
-    padding: 0;
-      
+    height: 450px;
+    padding: 1em;
+    align-items: start;
+
+    .footer-mainLink{
+      margin-top: 1em;
+    }
+
+    .footer-otherLink{
+      margin-top: 1em;
+    }
+    
     p {
         font-size: 0.9rem;
     }
